resources/acs-lab/hello-flask/hello-flask-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-flask
  name: hello-flask
spec:
  port:
    targetPort: 8080-8080
  to:
    kind: Service
    name: hello-flask
    weight: 100
  wildcardPolicy: None
